# SagaSmith-agent

./: .env.example  .gitignore  HANDOVER.md  MIGRATION.md  README-cn.md  README-en.md  README.md  REFACTOR_HANDOVER.md  SKILL.md  backfill_campaign_memory.bat  docker-compose.yml  install_napcat_runtime.bat  login_napcat_dnd.bat  manage_qq_bindings.bat  mcp - Shortcut.lnk  pyproject.toml  run_napcat_callback.bat  run_napcat_installedqq.bat  run_napcat_localqq.bat  run_webui.bat
backend/: Dockerfile  pyproject.toml
backend/app/: blocking_card_subagent.py  campaign_control.py  campaign_editor.py  campaign_memory.py  campaign_turns.py  character_build_flow.py  combat_reactions.py  commands.py  config.py  constants.py  dice_assistant.py  effect_actions.py  llm.py  llm_loop.py  lobby_sessions.py  main.py  memory_compressor.py  message_router.py  prompt_builder.py  qq_bindings.py  schemas.py  services.py  subagent_runner.py  task_sessions.py  worker.py
backend/app/agents/: campaign_editor_graph.py  dm_graph.py
backend/app/db/: database.py  models.py
backend/app/integrations/: manage_qq_bindings.py  napcat.py
backend/app/parsing/: api.py
backend/app/rag/: chunker.py  embedder.py  reindex.py
backend/app/tools/: build_spell_catalog.py  character_builder.py  character_rules.py  combat_tools.py  command_tools.py  dice.py  effect_engine.py  (+4 more)
backend/tests/: conftest.py  test_actors_and_dice_assistant.py  test_api.py  test_blocking_card_subagent.py  test_campaign_editor.py  test_character_rules.py  test_lobby_tool_scope.py  test_parsing_napcat.py  test_spell_catalog.py
(+140 files in other folders)
