[project]
name = "dnd-dm-agent-backend"
version = "0.1.0"
description = "Local-first DND DM Agent backend"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "langgraph==0.4.7",
  "openai==1.82.0",
  "openpyxl>=3.1.5",
  "psycopg[binary]==3.2.9",
  "pydantic-settings==2.9.1",
  "pypdf>=4.0.0",
  "python-docx>=1.0.0",
  "python-dotenv==1.1.0",
  "python-multipart>=0.0.20",
  "sentence-transformers>=5.1.0",
  "sqlalchemy==2.0.41",
  "torch==2.9.1",
  "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
